--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@metamask/sdk-react": "^0.31.5",
+    "@metamask/sdk-react-ui": "^0.29.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
