--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@metamask/sdk-react": "^0.31.5",
     "@metamask/sdk-react-ui": "^0.29.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
